# ccat

./: CMakeLists.txt
src/: main.cc  utils.cc  utils.hh
src/ccat/: action_factory.cc  action_factory.hh  ast_consumer.hh  check_base.cc  check_base.hh  context.hh
src/checkers/: loop-reverse-unsigned-type-check.cc  loop-reverse-unsigned-type-check.hh  make-unique-replace-new.cc  make-unique-replace-new.hh
